# andmed-et-en

./: .gitignore  404.html  AGENTS.md  README.md  index.html  main.py  mkdocs.yml  plan.md  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml  harvest-theses.yml
contributing/: index.html
data/: terms.yml
docs/: contributing.md  index.md
docs/terms/: a-b-testing.md  access-control.md  acid.md  activation-function.md  ad-hoc-query.md  aggregation.md  annotation.md  anomaly-detection.md  apache-airflow.md  apache-flink.md  apache-hadoop.md  apache-kafka.md  apache-spark.md  api-endpoint.md  api.md  artificial-intelligence.md  artificial-neural-network.md  attention-mechanism.md  attribute.md  auc.md  authentication.md  authorization.md  automl.md  avro.md  backpropagation.md  baseline.md  batch-normalization.md  batch-processing.md  batch.md  bayesian-inference.md  benchmark.md  bias.md  big-data.md  business-intelligence.md  cap-theorem.md  causation.md  cdc.md  change-data-capture.md  chatbot.md  ci-cd.md  (+297 more)
scripts/: bulk_add_reference_terms.py  fetch_theses.py  generate_glossary.py  promote_candidates.py
scripts/thesis/: __init__.py  harvester.py  parser.py  reference_terms.py  reporter.py  term_extractor.py
search/: search_index.json
terms/: index.html
terms/a-b-testing/: index.html
terms/access-control/: index.html
terms/acid/: index.html
terms/activation-function/: index.html
terms/ad-hoc-query/: index.html
terms/aggregation/: index.html
terms/annotation/: index.html
terms/anomaly-detection/: index.html
terms/api/: index.html
(+327 files in other folders)
